@@ -216,6 +216,7 @@ enum e_func {
 enum e_optcode {
    OPT_ADDRESS_FAMILY = 1,
    OPT_AI_ADDRCONFIG, 	/* getaddrinfo() */
+   OPT_AI_ALL, 		/* getaddrinfo() */
    OPT_AI_PASSIVE, 	/* getaddrinfo() */
    OPT_AI_V4MAPPED, 	/* getaddrinfo() */
    /* these are not alphabetically, I know... */
